--- a/index.html
+++ b/index.html
@@ -2732,7 +2732,8 @@ height: auto;
     background: rgba(225, 225, 225, 0.618);
     margin-top: 1rem;
     margin-bottom: 1.5rem;
-    border-top: 0.2rem solid #ee5454;
+    border-top: 0.14rem solid rgba(71, 214, 246, 0.773);
+    border-bottom: 0.14rem solid rgba(71, 214, 246, 0.773);
 }
 
 .Burki-pics0{
