--- a/index.html
+++ b/index.html
@@ -1075,7 +1075,7 @@
             flex-direction: column;
             width: 100%;
             height: auto;
-            background-color: rgba(248, 248, 248, 0.906);
+            background-color: rgba(251, 251, 251, 0.672);
             justify-content: center;
             align-items: center;
         }
@@ -2729,11 +2729,11 @@ height: auto;
     width: 100%;
     height: auto;
     padding: 10px;
-    background: rgba(225, 225, 225, 0.618);
+    background: rgba(234, 234, 234, 0.618);
     margin-top: 1rem;
     margin-bottom: 1.5rem;
-    border-top: 0.14rem solid rgba(71, 214, 246, 0.773);
-    border-bottom: 0.14rem solid rgba(71, 214, 246, 0.773);
+    border-top: 0.13rem solid rgba(71, 214, 246, 0.773);
+    border-bottom: 0.13rem solid rgba(71, 214, 246, 0.773);
 }
 
 .Burki-pics0{
@@ -2744,12 +2744,11 @@ height: auto;
     color: rgba(105, 105, 105, 0.751);
     font-family: 'Kanit';
     background: rgba(255, 255, 255, 0.984);
-    border: 0.12rem solid rgba(64, 116, 171, 0.46);
     justify-content: center;
     justify-items: center;
     text-align: left;
     width: 86%;
-    height: 370px;
+    height: auto;
 
 }
 .Burki-pics1{
@@ -2760,12 +2759,11 @@ height: auto;
     color: rgba(105, 105, 105, 0.751);
     font-family: 'Kanit';
     background: rgba(255, 255, 255, 0.984);
-    border: 0.12rem solid rgba(134, 187, 244, 0.567);
     justify-content: center;
     justify-items: center;
     text-align: left;
     width: 86%;
-    height: 370px;
+    height: auto;
 }
 
 .Burki-pics2{
@@ -2776,12 +2774,11 @@ height: auto;
     color: rgba(105, 105, 105, 0.751);
     font-family: 'Kanit';
     background: rgba(255, 255, 255, 0.984);
-    border: 0.12rem solid rgba(64, 116, 171, 0.46);
     justify-content: center;
     justify-items: center;
     text-align: left;
     width: 86%;
-    height: 370px;
+    height: auto;
 }
 
 .Burki-pics3{
@@ -2792,12 +2789,11 @@ height: auto;
     color: rgba(105, 105, 105, 0.751);
     font-family: 'Kanit';
     background: rgba(255, 255, 255, 0.984);
-    border: 0.12rem solid rgba(64, 116, 171, 0.46);
     justify-content: center;
     justify-items: center;
     text-align: left;
     width: 86%;
-    height: 370px;
+    height: auto;
 }
 .Burki-pics4{
     display: grid;
@@ -2807,12 +2803,11 @@ height: auto;
     color: rgba(105, 105, 105, 0.751);
     font-family: 'Kanit';
     background: rgba(255, 255, 255, 0.984);
-    border: 0.12rem solid rgba(64, 116, 171, 0.46);
     justify-content: center;
     justify-items: center;
     text-align: left;
     width: 86%;
-    height: 370px;
+    height: auto;
 }
 
 .Burki-pics5{
@@ -2823,12 +2818,11 @@ height: auto;
     color: rgba(105, 105, 105, 0.751);
     font-family: 'Kanit';
     background: rgba(255, 255, 255, 0.984);
-    border: 0.12rem solid rgba(64, 116, 171, 0.46);
     justify-content: center;
     justify-items: center;
     text-align: left;
     width: 86%;
-    height: 370px;
+    height: auto;
 }
 
 .Bu-pics1{
@@ -2844,7 +2838,7 @@ height: auto;
     font-size: 13.25px;
     background: #fff;
     color: rgba(79, 79, 79, 0.697);
-    border: 0.12rem solid rgba(64, 116, 171, 0.46);
+    border-left: 0.12rem solid rgba(44, 91, 140, 0.46);
 }
 
 .Bu-pics img{
