--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         }
         
         .navbar {
+            display: flex;
             background: rgba(5, 12, 47, 0.962);
             height: 53.16px;
             object-fit: cover;
@@ -79,7 +80,6 @@
             position: sticky;
             justify-content: center;
             align-items: center;
-            margin-top: -16px;
         }
 
         .navbar a {
@@ -100,7 +100,7 @@
             height: 44px;
             border: 2px solid #fff!important;
             border-radius: 0.3rem;
-            margin-top: -1.13px;
+            margin-top: 0.65rem;
         }
 
         .navbar img:hover {
@@ -120,7 +120,7 @@
         .Photography .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 16px;
-            padding: 14.5px 6px;
+            padding: 15.5px 6px;
             color: #fff;
             background: inherit;
             border: 0.1px solid #f9f9f9;
@@ -131,11 +131,11 @@
         .navbar:hover .Photography:hover .dropbtn {
             border: 0.1px solid #fff;
             border-top: none;
-            color: yellow;
-            border-bottom: 0.21rem solid rgba(0, 251, 255, 0.899);
+            color: #000;
+            border-bottom: 0.25rem solid transparent;
             transition: 0.35s ease;
             cursor: pointer;
-            background: rgba(16, 16, 166, 0.55);
+            background: #fff;
         }
 
  .Photography-content {
@@ -148,7 +148,6 @@
   padding: 1px;
   z-index: 1;
   box-shadow: 0 5px 0.45rem 2px rgb(16, 56, 119);
-  border-top: 0.25rem solid rgb(255, 0, 0);
 }
 
         .Photography-content a {
@@ -194,7 +193,7 @@
         .Sport .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 16px;
-            padding: 14.5px 6px;
+            padding: 15.5px 6px;
             color: #fff;
             background: inherit;
             border: 0.1px solid #f9f9f9;
@@ -207,9 +206,10 @@
             border-top: none;
             border-bottom: 0.21rem solid rgba(0, 251, 255, 0.899);
             transition: 0.35s ease;
-            color: yellow;
+            border-bottom: 0.25rem solid transparent;
+            color: #000;
             cursor: pointer;
-            background: rgba(15, 15, 156, 0.55);
+            background: #fff;
         }
 
         .Sport-content {
@@ -223,7 +223,6 @@
   padding: 1px;
   z-index: 1;
   box-shadow: 0 5px 0.45rem 2px rgb(16, 56, 119);
-  border-top: 0.25rem solid rgb(255, 0, 0);
    }
 
         .Sport-content a {
@@ -270,7 +269,7 @@
         .Education .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 16px;
-            padding: 14.5px 6px;
+            padding: 15.5px 6px;
             color: #fff;
             background: inherit;
             border: 0.1px solid #f9f9f9;
@@ -281,11 +280,11 @@
         .navbar:hover .Education:hover .dropbtn {
             border: 0.1px solid #fff;
             border-top: none;
-            border-bottom: 0.21rem solid rgba(0, 251, 255, 0.899);
+            border-bottom: 0.25rem solid transparent;
             transition: 0.35s ease;
-            color: yellow;
+            color: #000;
             cursor: pointer;
-            background: rgba(15, 15, 156, 0.55);
+            background: #fff;
         }
 
         .Education-content {
@@ -299,8 +298,7 @@
   justify-content: center;
   align-items: center;
   box-shadow: 0 5px 0.45rem 2px rgb(16, 56, 119);
-  border-top: 0.25rem solid rgb(255, 0, 0);
-  }
+   }
 
         .Education-content a {
             font-size: 16px;
@@ -346,7 +344,7 @@
         .Promoter .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 16px;
-            padding: 14.5px 6px;
+            padding: 15.5px 6px;
             color: #fff;
             background: inherit;
             border: 0.1px solid #f9f9f9;
@@ -357,11 +355,11 @@
         .navbar:hover .Promoter:hover .dropbtn {
             border: 0.1px solid #fff;
             border-top: none;
-            border-bottom: 0.21rem solid rgba(0, 251, 255, 0.899);
+            border-bottom: 0.25rem solid transparent;
             transition: 0.35s ease;
-            color: yellow;
+            color: #000;
             cursor: pointer;
-            background: rgba(15, 15, 156, 0.55);
+            background: #fff;
         }
 
         .Promoter-content {
@@ -375,8 +373,7 @@
   align-items: center;
   z-index: 1;
   box-shadow: 0 5px 0.45rem 2px rgb(16, 56, 119);
-  border-top: 0.25rem solid rgb(255, 0, 0);
-        }
+    }
 
         .Promoter-content a {
             font-size: 17px;
@@ -422,7 +419,7 @@
         .Contact .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 16px;
-            padding: 14.5px 6px;
+            padding: 15.5px 6px;
             color: #fff;
             background: inherit;
             border: 0.1px solid #f9f9f9;
@@ -434,11 +431,11 @@
         .navbar:hover .Contact:hover .dropbtn {
             border: 0.1px solid #f9f9f9;
             border-top: none;
-            border-bottom: 0.21rem solid rgba(0, 251, 255, 0.899);
+            border-bottom: 0.25rem solid transparent;
             transition: 0.35s ease;
-            color: yellow;
+            color: #000;
             cursor: pointer;
-            background: rgba(15, 15, 156, 0.55);
+            background: #fff;
         }
 
         .Contact-content {
@@ -452,8 +449,7 @@
   align-items: center;
   z-index: 1;
   box-shadow: 0 5px 0.45rem 2px rgb(16, 56, 119);
-  border-top: 0.25rem solid rgb(255, 0, 0);
-   }
+ }
 
         .Contact-content a {
             width: 73px;
@@ -500,7 +496,7 @@
         .Community .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 16px;
-            padding: 14.5px 6px;
+            padding: 15.5px 6px;
             color: #fff;
             background: inherit;
             border: 0.1px solid #f9f9f9;
@@ -511,11 +507,11 @@
         .navbar:hover .Community:hover .dropbtn {
             border: 0.1px solid #fff;
             border-top: none;
-            border-bottom: 0.21rem solid rgba(0, 251, 255, 0.899);
+            border-bottom: 0.25rem solid transparent;
             transition: 0.35s ease;
-            color: yellow;
+            color: #000;
             cursor: pointer;
-            background: rgba(15, 15, 156, 0.55);
+            background: #fff;
         }
 
         .Community-content {
@@ -529,7 +525,6 @@
   padding: 1px;
   z-index: 1;
   box-shadow: 0 5px 0.45rem 2px rgb(16, 56, 119);
-  border-top: 0.25rem solid rgb(255, 0, 0);
    } 
 
         .Community-content a {
@@ -590,11 +585,11 @@
             border: 0.1px solid #fff;
             border-top: none;
             border-left: 0.15rem solid #f9f9f9;
-            border-bottom: 0.21rem solid rgba(0, 251, 255, 0.899);
+            border-bottom: 0.25rem solid transparent;
             transition: 0.35s ease;
-            color: yellow;
+            color: #000;
             cursor: pointer;
-            background: rgba(15, 15, 156, 0.55);
+            background: #fff;
         }
 
         .TikiYiki-content {
@@ -609,7 +604,6 @@
   align-items: center;
   margin-left: 45px;
   box-shadow: 0 5px 0.45rem 2px rgb(16, 56, 119);
-  border-top: 0.25rem solid rgb(255, 0, 0);
    }
 
         .TikiYiki-content a {
@@ -658,7 +652,7 @@
         .Disability .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 16px;
-            padding: 14.5px 6px;
+            padding: 15.5px 6px;
             color: #fff;
             background: inherit;
             border: 0.1px solid #f9f9f9;
@@ -669,11 +663,11 @@
         .navbar:hover .Disability:hover .dropbtn {
             border: 0.1px solid #fff;
             border-top: none;
-            border-bottom: 0.21rem solid rgba(0, 251, 255, 0.899);
+            border-bottom: 0.25rem solid transparent;
             transition: 0.35s ease;
-            color: yellow;
+            color: #000;
             cursor: pointer;
-            background: rgba(15, 15, 156, 0.55);
+            background: #fff;
         }
 
         .Disability-content {
@@ -687,7 +681,6 @@
   justify-content: center;
   align-items: center;
   box-shadow: 0 5px 0.45rem 2px rgb(16, 56, 119);
-  border-top: 0.25rem solid rgb(255, 0, 0);
   }
 
         .Disability-content a {
