--- a/index.html
+++ b/index.html
@@ -3741,7 +3741,7 @@ background: #717171;
             color: #000;
             margin-top: 4rem;
             border-radius: 0.5rem;
-            box-shadow: 0 -0.5px 0.2rem 0 rgba(164, 208, 250, 0.842);
+            box-shadow: 0 1px 0.15rem 0 rgb(40, 155, 236);
         }
 
         .TOPE{
@@ -3785,8 +3785,7 @@ background: #717171;
             margin-bottom: 3.5rem;
             border: 0.12rem solid rgba(110, 133, 204, 0.267);
             background-color: rgba(255, 255, 255, 0.925);
-            border-top: 0.25rem solid rgba(110, 133, 204, 0.365);
-        }
+          }
 
         .Promo{
             display: grid;
@@ -3822,7 +3821,7 @@ background: #717171;
             height: 730px;
             justify-content: center;
             justify-items: center;
-            background-color: rgba(255, 255, 255, 0.925);
+            background-color: rgba(254, 254, 254, 0.981);
             border: 0.12rem solid rgba(110, 133, 204, 0.267);
             margin-bottom: 3.5rem;
         }
@@ -3873,11 +3872,11 @@ background: #717171;
             height: 50px;
             border-radius: 0.5rem;
             text-align: left;
-            background: rgba(143, 143, 143, 0.16);
+            background: rgba(165, 165, 165, 0.16);
             line-height: 19px;
             font-family: 'Kanit';
             font-size: 13.13px;
-            color:rgb(62, 106, 182);
+            color:rgb(53, 107, 201);
             border: 0.12rem solid rgba(55, 91, 192, 0.447)
         }
           .S:hover{
