--- a/index.html
+++ b/index.html
@@ -1300,13 +1300,13 @@
             justify-content: center;
             align-items: center;
             text-align: left;
-            background-color: #fdfdfde5;
+            background: #ffffffec;
             border-top-right-radius: 0.5rem;
             border-top-left-radius: 0.5rem;
             padding-top: 20px;
             padding-bottom: 20px;
             margin-top: 4%;
-            box-shadow: 0 1px 0.15rem 0 rgb(40, 155, 236);
+            box-shadow: 0 0 0.15rem 0 rgb(40, 155, 236);
         }
 
         .Home-Photo {
@@ -1562,7 +1562,7 @@
             column-gap: 10px;
             justify-content: space-around;
             justify-items: center;
-            background-color: #ffffffec;
+            background: #ffffffec;
             width: 84%;
             height: 285px;
             font-family: 'Kanit';
@@ -3684,7 +3684,7 @@ background: #717171;
             border: 0.1px solid rgba(139, 139, 139, 0.486);
             border-bottom: none;
             color: rgba(31, 107, 178, 0.949);
-            box-shadow: 0 2px 0.1rem 0.1px rgba(25, 117, 202, 0.669);
+            box-shadow: 0 0 0.1rem 0.1px rgba(25, 117, 202, 0.669);
             padding: 7px;
             flex-direction: column;
             justify-content: center;
@@ -3739,7 +3739,7 @@ background: #717171;
             color: #000;
             margin-top: 5rem;
             border-radius: 0.5rem;
-            box-shadow: 0 1px 0.15rem 0 rgb(40, 155, 236);
+            box-shadow: 0 0 0.15rem 0 rgb(40, 155, 236);
         }
 
         .TOPE{
@@ -3874,8 +3874,8 @@ background: #717171;
             line-height: 19px;
             font-family: 'Kanit';
             font-size: 13px;
-            color:rgb(55, 110, 205);
-            border: 0.12rem solid rgba(69, 113, 236, 0.447)
+            color:rgb(54, 107, 199);
+            border: 0.12rem solid rgba(60, 106, 234, 0.447)
         }
           .S:hover{
             background: #111111d3;
