--- a/index.html
+++ b/index.html
@@ -2113,7 +2113,7 @@ height: auto;
         }
 
         .contentx a:hover {
-            box-shadow: 0 -1px 0.5rem 0.5px rgb(49, 128, 255);
+            box-shadow: 0 1px 0.15rem 0 rgb(40, 155, 236);
             transition: 0.25s linear;
         }
 
@@ -3078,7 +3078,8 @@ cursor: pointer;
             background-color: #ffffffec;
             border-radius: 9px;
             padding: 10px;
-            margin-top: 6px;
+            margin-top: 14px;
+            box-shadow: 0 1px 0.15rem 0 rgb(40, 155, 236);
         }
 
         .C1 {
@@ -3199,7 +3200,6 @@ cursor: pointer;
             overflow: hidden;
             position: relative;
             background: transparent;
-
         }
 
         .C23 img {
@@ -3870,12 +3870,12 @@ background: #717171;
             height: 50px;
             border-radius: 0.5rem;
             text-align: left;
-            background: rgba(193, 193, 193, 0.16);
+            background: rgba(187, 187, 187, 0.142);
             line-height: 19px;
             font-family: 'Kanit';
             font-size: 13px;
             color:rgb(54, 107, 199);
-            border: 0.12rem solid rgba(60, 106, 234, 0.447)
+            border: 0.12rem solid rgba(70, 113, 233, 0.447)
         }
           .S:hover{
             background: #111111d3;
