--- a/index.html
+++ b/index.html
@@ -120,18 +120,13 @@
         .Photography .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 16px;
-            padding: 15px 6px;
+            padding: 17px 6px;
             color: #fff;
             background: inherit;
-            border: 0.1px solid #f9f9f9;
-            border-top: none;
-            border-bottom: 0.25rem solid transparent;
+            border: none;
         }
 
         .navbar:hover .Photography:hover .dropbtn {
-            border-top: none;
-            border-left: 0.1rem solid #f9f9f9;
-            border-bottom: 0.25rem solid transparent;
             transition: 0.35s ease;
             color: #000;
             cursor: pointer;
@@ -193,18 +188,13 @@
         .Sport .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 16px;
-            padding: 15px 6px;
+            padding: 17px 6px;
             color: #fff;
             background: inherit;
-            border: 0.1px solid #f9f9f9;
-            border-top: none;
-            border-bottom: 0.25rem solid transparent;
+            border: none;
         }
 
         .navbar:hover .Sport:hover .dropbtn {
-            border-top: none;
-            border-left: 0.1rem solid #f9f9f9;
-            border-bottom: 0.25rem solid transparent;
             transition: 0.35s ease;
             color: #000;
             cursor: pointer;
@@ -268,18 +258,13 @@
         .Education .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 16px;
-            padding: 15px 6px;
+            padding: 17px 6px;
             color: #fff;
             background: inherit;
-            border: 0.1px solid #f9f9f9;
-            border-top: none;
-            border-bottom: 0.25rem solid transparent;
+            border: none;
         }
 
         .navbar:hover .Education:hover .dropbtn {
-            border-top: none;
-            border-left: 0.1rem solid #f9f9f9;
-            border-bottom: 0.25rem solid transparent;
             transition: 0.35s ease;
             color: #000;
             cursor: pointer;
@@ -343,18 +328,13 @@
         .Promoter .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 16px;
-            padding: 15px 6px;
+            padding: 17px 6px;
             color: #fff;
             background: inherit;
-            border: 0.1px solid #f9f9f9;
-            border-top: none;
-            border-bottom: 0.25rem solid transparent;
+            border: none;
         }
 
         .navbar:hover .Promoter:hover .dropbtn {
-            border-top: none;
-            border-left: 0.1rem solid #f9f9f9;
-            border-bottom: 0.25rem solid transparent;
             transition: 0.35s ease;
             color: #000;
             cursor: pointer;
@@ -418,19 +398,13 @@
         .Contact .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 16px;
-            padding: 15px 6px;
+            padding: 17px 6px;
             color: #fff;
             background: inherit;
-            border: 0.1px solid #f9f9f9;
-            border-right: 0.15rem solid #f9f9f9;
-            border-top: none;
-            border-bottom: 0.25rem solid transparent;
+            border: none;
         }
 
         .navbar:hover .Contact:hover .dropbtn {
-            border-top: none;
-            border-left: 0.1rem solid #f9f9f9;
-            border-bottom: 0.25rem solid transparent;
             transition: 0.35s ease;
             color: #000;
             cursor: pointer;
@@ -495,18 +469,13 @@
         .Community .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 16px;
-            padding: 15px 6px;
+            padding: 17px 6px;
             color: #fff;
             background: inherit;
-            border: 0.1px solid #f9f9f9;
-            border-top: none;
-            border-bottom: 0.25rem solid transparent;
+            border: none;
         }
 
         .navbar:hover .Community:hover .dropbtn {
-            border-top: none;
-            border-left: 0.1rem solid #f9f9f9;
-            border-bottom: 0.25rem solid transparent;
             transition: 0.35s ease;
             color: #000;
             cursor: pointer;
@@ -570,20 +539,14 @@
         .TikiYiki .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 16px;
-            padding: 14px 6px;
+            padding: 17px 6px;
             color: #fff;
             background: inherit;
-            border-left: 0.15rem solid #f9f9f9;
-            border-right: 0.1px solid #f9f9f9;
-            border-top: none;
-            border-bottom: 0.25rem solid transparent;
             margin-left: 45px;
+            border: none;
         }
 
         .navbar:hover .TikiYiki:hover .dropbtn {
-            border-top: none;
-            border-left: 0.1rem solid #f9f9f9;
-            border-bottom: 0.25rem solid transparent;
             transition: 0.35s ease;
             color: #000;
             cursor: pointer;
@@ -650,18 +613,13 @@
         .Disability .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 16px;
-            padding: 15px 6px;
+            padding: 17px 6px;
             color: #fff;
             background: inherit;
-            border: 0.1px solid #f9f9f9;
-            border-top: none;
-            border-bottom: 0.25rem solid transparent;
+            border: none;
         }
 
         .navbar:hover .Disability:hover .dropbtn {
-            border-top: none;
-            border-left: 0.1rem solid #f9f9f9;
-            border-bottom: 0.25rem solid transparent;
             transition: 0.35s ease;
             color: #000;
             cursor: pointer;
@@ -3664,7 +3622,6 @@ background: #717171;
             font-size: 16px;
             padding-top: 20px;
             padding-bottom: 5px;
-            margin-top: 6px;
             margin-left: 2rem;
             cursor: pointer;
             border-radius: 0.3rem;
@@ -3866,7 +3823,7 @@ background: #717171;
             justify-content: left;
             justify-items: center;
             width: 100%;
-            padding: 8px;
+            padding: 6px;
             height: 50px;
             border-radius: 0.5rem;
             text-align: left;
