--- a/index.html
+++ b/index.html
@@ -2182,9 +2182,9 @@ height: auto;
             line-height: 13px;
             background-color: #fff;
             margin-right: 32%;
-            border: 0.12rem solid rgb(197, 197, 197);
-            box-shadow: 0 0 0.5rem 0.5px rgb(190, 190, 190);
-            border-radius: 0.45rem;
+            border: 0.12rem solid rgba(252, 252, 252, 0.747);
+            box-shadow: 0 0 0.17rem 0 rgb(188, 188, 188);
+            border-radius: 0.15rem;
             margin-top: -0.35rem;
         }
 
@@ -2414,9 +2414,9 @@ height: auto;
             justify-content: center;
             justify-items: center;
             background-color: transparent;
-            border: 0.12rem solid rgb(197, 197, 197);
-            box-shadow: 0 0 0.5rem 0.5px rgb(190, 190, 190);
-            border-radius: 0.45rem;
+            border: 0.12rem solid rgba(252, 252, 252, 0.747);
+            box-shadow: 0 0 0.17rem 0 rgb(188, 188, 188);
+            border-radius: 0.15rem;
             margin-top: -0.35rem;
         }
 
@@ -3396,9 +3396,9 @@ cursor: pointer;
             color: #000;
             line-height: 19.75px;
             padding: 7px;
-            border: 0.14rem solid #c2c2c2d7;
-            border-radius: 0.5rem;
-            box-shadow: 0 2px 0.45rem 2px rgb(203, 203, 203);
+            border: 0.11rem solid #e0e0e0d7;
+            border-radius: 0.45rem;
+            box-shadow: 0 0 0.16rem 0 rgb(2, 183, 255);
         }
 
         .in-sidebar a:hover {
@@ -3457,9 +3457,9 @@ cursor: pointer;
             line-height: 18.4px;
             background: #fff;
             margin-top: -5px;
-            border: 0.14rem solid #c2c2c2d7;
-            border-radius: 0.5rem;
-            box-shadow: 0 2px 0.45rem 2px rgb(203, 203, 203);
+            border: 0.11rem solid #e0e0e0d7;
+            border-radius: 0.45rem;
+            box-shadow: 0 0 0.16rem 0 rgb(2, 183, 255);
         }
 
         .explanation2:hover{
