--- a/index.html
+++ b/index.html
@@ -3692,7 +3692,7 @@ background: #717171;
             padding: 10px;
             height: 138px;
             width: 84%;
-            background: rgba(255, 255, 255, 0.688);
+            background-color: #ffffffec;
             color: #000;
             margin-top: 5rem;
             border-radius: 0.5rem;
