--- a/index.html
+++ b/index.html
@@ -2388,6 +2388,7 @@ height: auto;
             padding: 10px;
             height: 600px;
             background-color: transparent;
+            margin-bottom: 1rem;
         }
 
         .imtitle {
@@ -2580,6 +2581,7 @@ height: auto;
             padding-top: 5px;
             border-bottom: 0.4rem solid #000;
             box-shadow: 0 1px 0.15rem 0 rgb(40, 155, 236);
+            margin-bottom: 1rem;
         }
 
         .content9a img {
@@ -3478,7 +3480,7 @@ cursor: pointer;
             font-family: 'Kanit';
             padding-top: 5px;
             padding-bottom: 5px;
-            border: 0.65rem solid #ededed;
+            border: 0.7rem solid #959595ef;
         }
 
         .T{
