--- a/index.html
+++ b/index.html
@@ -2634,11 +2634,11 @@ height: auto;
         .BURKINAFASO{
             display: grid;
             grid-template-rows: 0.5fr 1fr;
-            column-gap: 1rem;
-            justify-content: center;
+            column-gap: 2rem;
+            justify-content: space-between;
             justify-items: center;
             width: 84%;
-            height: 718px;
+            height: 720px;
             padding: 10px;
             background: rgba(246, 246, 246, 0.762);
             font-family: 'Merienda';
