--- a/index.html
+++ b/index.html
@@ -5078,7 +5078,7 @@ function showSlides(n) {
 
         <div class="Bu-pics">
         <div class="Bu">
-            <img src="https://st2.depositphotos.com/17584076/46174/v/1600/depositphotos_461747842-stock-illustration-employee-people-disabilities-inclusion-work.jpg">
+            <img src="https://www.careeraddict.com/uploads/article/61017/job-search-disability.png">
         </div>
 
         <div class="Bu">
