--- a/index.html
+++ b/index.html
@@ -2635,7 +2635,7 @@ height: auto;
             display: grid;
             grid-template-rows: 0.5fr 1fr;
             column-gap: 2rem;
-            justify-content: space-between;
+            justify-content: center;
             justify-items: center;
             width: 84%;
             height: 720px;
