--- a/index.html
+++ b/index.html
@@ -2817,6 +2817,7 @@ height: auto;
     background: rgba(236, 236, 236, 0.945);
     border: 0.11rem solid rgba(223, 223, 223, 0.933);
     border-radius: 0.45rem;
+    margin-top: 3rem;
 }
 
 .Bu{
