--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
         .navbar:hover .Photography:hover .dropbtn {
             transition: 0.35s ease;
-            color: #000;
+            color: red;
             cursor: pointer;
             background: #fff;
         }
@@ -142,14 +142,14 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 2px 0.3rem 0 rgb(21, 72, 155);
+  box-shadow: 0 2px 0.22rem 0 rgb(21, 72, 155);
 }
 
         .Photography-content a {
             font-size: 17px;
             float: none;
-            color: rgb(27, 76, 239);
-            padding: 14px 16px;
+            color: rgb(64, 114, 195);
+            padding: 9.45px 14px;
             text-decoration: none;
             display: block;
             text-align: left;
@@ -196,7 +196,7 @@
 
         .navbar:hover .Sport:hover .dropbtn {
             transition: 0.35s ease;
-            color: #000;
+            color: red;
             cursor: pointer;
             background: #fff;
         }
@@ -211,14 +211,14 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 2px 0.3rem 0 rgb(21, 72, 155);
+  box-shadow: 0 2px 0.22rem 0 rgb(21, 72, 155);
    }
 
         .Sport-content a {
             font-size: 16px;
             float: none;
-            color: rgb(27, 76, 239);
-            padding: 14px 16px;
+            color: rgb(64, 114, 195);
+            padding: 9.45px 14px;
             text-decoration: none;
             display: block;
             text-align: left;
@@ -266,7 +266,7 @@
 
         .navbar:hover .Education:hover .dropbtn {
             transition: 0.35s ease;
-            color: #000;
+            color: red;
             cursor: pointer;
             background: #fff;
         }
@@ -281,14 +281,14 @@
   height: 155px;
   justify-content: center;
   align-items: center;
-  box-shadow: 0 2px 0.3rem 0 rgb(21, 72, 155);
+  box-shadow: 0 2px 0.22rem 0 rgb(21, 72, 155);
    }
 
         .Education-content a {
             font-size: 16px;
             float: none;
-            color: rgb(27, 76, 239);
-            padding: 14px 16px;
+            color: rgb(64, 114, 195);
+            padding: 9.45px 14px;
             text-decoration: none;
             display: block;
             text-align: left;
@@ -336,7 +336,7 @@
 
         .navbar:hover .Promoter:hover .dropbtn {
             transition: 0.35s ease;
-            color: #000;
+            color: red;
             cursor: pointer;
             background: #fff;
         }
@@ -351,14 +351,14 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
-  box-shadow: 0 2px 0.3rem 0 rgb(21, 72, 155);
+  box-shadow: 0 2px 0.22rem 0 rgb(21, 72, 155);
     }
 
         .Promoter-content a {
             font-size: 17px;
             float: none;
-            color: rgb(27, 76, 239);
-            padding: 14px 16px;
+            color: rgb(64, 114, 195);
+            padding: 9.45px 14px;
             text-decoration: none;
             display: block;
             text-align: left;
@@ -406,7 +406,7 @@
 
         .navbar:hover .Contact:hover .dropbtn {
             transition: 0.35s ease;
-            color: #000;
+            color: red;
             cursor: pointer;
             background: #fff;
         }
@@ -421,15 +421,15 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
-  box-shadow: 0 2px 0.3rem 0 rgb(21, 72, 155);
+  box-shadow: 0 2px 0.22rem 0 rgb(21, 72, 155);
  }
 
         .Contact-content a {
             width: 73px;
             font-size: 17px;
             float: none;
-            color: rgb(27, 76, 239);
-            padding: 14px 16px;
+            color: rgb(64, 114, 195);
+            padding: 9.45px 14px;
             text-decoration: none;
             display: block;
             text-align: left;
@@ -477,7 +477,7 @@
 
         .navbar:hover .Community:hover .dropbtn {
             transition: 0.35s ease;
-            color: #000;
+            color: red;
             cursor: pointer;
             background: #fff;
         }
@@ -492,14 +492,14 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 2px 0.3rem 0 rgb(21, 72, 155);
+  box-shadow: 0 2px 0.22rem 0 rgb(21, 72, 155);
    } 
 
         .Community-content a {
             font-size: 17px;
             float: none;
-            color: rgb(27, 76, 239);
-            padding: 14px 16px;
+            color: rgb(64, 114, 195);
+            padding: 9.45px 14px;
             text-decoration: none;
             display: block;
             text-align: left;
@@ -548,7 +548,7 @@
 
         .navbar:hover .TikiYiki:hover .dropbtn {
             transition: 0.35s ease;
-            color: #000;
+            color: red;
             cursor: pointer;
             background: #fff;
         }
@@ -564,14 +564,14 @@
   justify-content: center;
   align-items: center;
   margin-left: 45px;
-  box-shadow: 0 2px 0.3rem 0 rgb(21, 72, 155);
+  box-shadow: 0 2px 0.22rem 0 rgb(21, 72, 155);
    }
 
         .TikiYiki-content a {
             font-size: 17px;
             float: none;
-            color: rgb(27, 76, 239);
-            padding: 14px 16px;
+            color: rgb(64, 114, 195);
+            padding: 9.45px 14px;
             text-decoration: none;
             display: block;
             text-align: left;
@@ -621,7 +621,7 @@
 
         .navbar:hover .Disability:hover .dropbtn {
             transition: 0.35s ease;
-            color: #000;
+            color: red;
             cursor: pointer;
             background: #fff;
         }
@@ -636,14 +636,14 @@
   height: 158px;
   justify-content: center;
   align-items: center;
-  box-shadow: 0 2px 0.3rem 0 rgb(21, 72, 155);
+  box-shadow: 0 2px 0.22rem 0 rgb(21, 72, 155);
   }
 
         .Disability-content a {
             font-size: 17px;
             float: none;
-            color: rgb(27, 76, 239);
-            padding: 14px 16px;
+            color: rgb(64, 114, 195);
+            padding: 9.45px 14px;
             text-decoration: none;
             display: block;
             text-align: left;
@@ -2795,22 +2795,24 @@ height: auto;
 
 .BP1{
     padding: 15px;
-    border-right: 0.11rem solid rgba(223, 223, 223, 0.933);
-    border-left: 0.11rem solid rgba(223, 223, 223, 0.933);
+    border-right: 0.11rem solid rgba(221, 221, 221, 0.933);
+    border-left: 0.11rem solid rgba(221, 221, 221, 0.933);
 }
 
 .B{
     display: grid;
     grid-template-rows: 1fr;
-    row-gap: 0.25rem;
+    row-gap: 0.15rem;
     justify-content: left;
     justify-items: left;
     width: 190px;
-    height: 896px;
+    height: 877px;
     padding: 15px;
-    background: rgba(251, 251, 251, 0.803);
+    background: rgba(245, 245, 245, 0.77);
     text-align: left;
     font-family: 'Kanit';
+    border: none;
+    border-radius: 0.35rem;
 }
 .country{
     display: grid;
@@ -2818,7 +2820,7 @@ height: auto;
     justify-items: center;
     text-align: left;
     padding: 2px;
-    color:rgb(22, 107, 177);
+    color:rgb(29, 101, 159);
 }
 .country:hover{
     text-decoration: underline;
@@ -5072,7 +5074,7 @@ function showSlides(n) {
 </div>
 
 <div class="B">
-    <div style="font-family: 'Kanit'; margin-top: -0.35rem;">
+    <div style="font-family: 'helvetica'; font-size: 12px; margin-top: -0.35rem;">
         <h4>Inclusion Africa</h4>
     </div>
 <a href="https://www.hi-us.org/en/country/burkina-faso" target="_blank">
@@ -5081,65 +5083,65 @@ function showSlides(n) {
     </div>
 </a>
 
-<a href="#" target="_blank">
+<a href="https://education-profiles.org/sub-saharan-africa/niger/~inclusion" target="_blank">
     <div class="country">
    2. In Niger
     </div>
 </a>
 
-<a href="#" target="_blank">
+<a href="https://education-profiles.org/sub-saharan-africa/mali/~inclusion" target="_blank">
 <div class="country">
 3. In Mali
     </div>
     </a>
-    <a href="#" target="_blank">
+    <a href="https://options.co.uk/article/creating-a-more-inclusive-ghana-ghana-somubi-dwumadies-remarkable-journey-to-reduce-stigma-and-discrimination-against-people-with-disabilities-and-mental-health/" target="_blank">
     <div class="country">
       4. In Ghana
             </div>
             </a>
 
-            <a href="#" target="_blank">
+            <a href="https://doctorswithafrica.org/en/whats-new/news/homenews/disability-inclusion-and-care-in-ivory-coast/" target="_blank">
             <div class="country">
                5. In Côte D'Ivoire
                     </div>
                     </a>
 
-                    <a href="#" target="_blank">
+                    <a href="https://www.hi-canada.org/en/country/benin" target="_blank">
                     <div class="country">
                        6. In Benin
                             </div>
                             </a>
 
-                            <a href="#" target="_blank">
+                            <a href="https://www.hi.org/en/country/togo" target="_blank">
                             <div class="country">
                                7. In Togo
                                     </div>
                                     </a>
 
-                                    <a href="#" target="_blank">
+                                    <a href="https://www.hi-canada.org/en/country/senegal" target="_blank">
                                     <div class="country">
                                       8. In Senegal
                                             </div>
                                             </a>
-                                            <a href="#" target="_blank">
+                                            <a href="https://education-profiles.org/sub-saharan-africa/guinea/~inclusion" target="_blank">
                                             <div class="country">
                                                9. In Conakry-Guinea
                                                     </div>
                                                     </a>
 
-                                                    <a href="#" target="_blank">
+                                                    <a href="https://www.macfound.org/press/perspectives/make-way-for-the-disability-rights-agenda-in-nigeria" target="_blank">
                                                     <div class="country">
                                                        10. In Nigeria
                                                             </div>
                                                             </a>
 
-                                                            <a href="#" target="_blank">
+                                                            <a href="https://www.hi-us.org/en/country/morocco" target="_blank">
                                                             <div class="country">
                                                                 11. In Morocco
                                                                     </div>
                                                                     </a>
 
-                                                                    <a href="#" target="_blank">
+                                                                    <a href="https://education-profiles.org/northern-africa-and-western-asia/algeria/~inclusion" target="_blank">
                                                                     <div class="country">
                                                                 12. In Algeria
                                                                     </div>
