--- a/index.html
+++ b/index.html
@@ -1027,7 +1027,7 @@
             flex-direction: column;
             width: 100%;
             height: auto;
-            background-color: rgba(241, 241, 241, 0.624);
+            background-color: rgba(244, 244, 244, 0.57);
             justify-content: center;
             align-items: center;
         }
@@ -3876,7 +3876,7 @@ background: #717171;
             margin-top: 3.5rem;
             margin-bottom: 3.5rem;
             border: 0.12rem solid rgba(110, 133, 204, 0.267);
-            background-color: rgba(255, 255, 255, 0.925);
+            background-color: rgba(255, 255, 255, 0.958);
           }
 
         .Promo{
@@ -3902,7 +3902,7 @@ background: #717171;
         }
 
         .Pro2{
-            background: rgba(237, 237, 251, 0.141);
+            background: rgba(243, 243, 254, 0.141);
             height: 150px;
         }
 
@@ -3913,7 +3913,7 @@ background: #717171;
             height: 730px;
             justify-content: center;
             justify-items: center;
-            background-color: rgba(255, 255, 255, 0.981);
+            background-color: #fff;
             border: 0.12rem solid rgba(110, 133, 204, 0.267);
             margin-bottom: 3.5rem;
         }
@@ -3941,7 +3941,7 @@ background: #717171;
           column-gap: 0.65rem;
           width: 100%;
           height: 645px;
-          background: rgba(178, 183, 193, 0.092);
+          background: rgba(253, 253, 253, 0.68);
           font-family: 'Kanit';
           color:goldenrod;
           padding: 12px;
@@ -3964,12 +3964,12 @@ background: #717171;
             height: 50px;
             border-radius: 0.5rem;
             text-align: left;
-            background: rgba(187, 187, 187, 0.142);
+            background: rgba(220, 220, 220, 0.508);
             line-height: 19px;
             font-family: 'Kanit';
             font-size: 13px;
-            color:rgb(54, 107, 199);
-            border: 0.12rem solid rgba(70, 113, 233, 0.447)
+            color:rgb(47, 101, 195);
+            border: 0.12rem solid rgba(60, 93, 182, 0.828)
         }
           .S:hover{
             background: #111111d3;
@@ -5062,7 +5062,7 @@ function showSlides(n) {
         <div class="BP1">
     <h2 style="font-size: 20px"> 1. Disabilities And Inclusion</h2> 
     <p> <br>
-        One of the most simplistic and probable way to measure the level of INCLUSION is to observe first what is happening in the area. How people (non disabled and disabled ones) are interacting between themselves in terms of communicating, helping, advicing each other or how vulnerable people are treated ? Do the people interact between themselves in person, by virtual channels (phone, internet) or other ways ? And then the answers could stand as index to learn and understand more how inclusion is dealt in the area. But something is clear, for any living community, the existence of connections between people, is a huge vector to get the community moving ahead in cohesion. A set of social rules defines how it is organised. Leaders of the community have to make lots efforts to keep the commnunity safe.
+        One of the most simplistic and probable way to measure the level of INCLUSION is first to observe what is happening in terms of social interactions and conversations between people of the area. How people (non disabled and disabled ones) are behaving between themselves in communicating, advicing and helping each other or how vulnerable people like elders and disabled people are treated ? Do the non-disabled people interact with disabled people in person, by postal or virtual channels (phone, internet) or other ways ? Then all the answers could stand as first index to learn and understand more about inclusion. But something is clear, for any living community, the existence of connections with commnunicstions between people, is a huge vector to get the community vibrant so moving ahead in cohesion. A set of social rules defines how it is organised. Leaders of the community have to make lots efforts to keep the commnunity safe.
       where every member who needs to build a family, having a good life and social interactions should respect the rules. At the same time people talking to each other, giving respect to neighbours, being in solidarity with those in need, behaving as normal social rules could recommand is imperative to keep the harmony. Also interacting and/or helping people in need no matter their cultural or physical difference is a great human value but inclusive too because every human-being matters and is part of the community. It is how things should work. it is a way to continue in building a strong and inclusive community. The exercise of observation can be easier ou difficult but is feasable by anyone even it can take a time to make a conclusion. 
         The fact to be able to observe, idealize and summurize some causes of exclusion or inclusion is important. It's also a good beginning but no everyone can do it without a volunteering and objective mind. A good observer should make a special analysis about conversations between non-disabled and disabled people because it uses to be unfamiliar. It is some kind of interactions between people of difference and the rest of the society that will more highlight the level of Inclusion in the community. What constant and consistent those interactions are ? Can they impact positively the processus of inclusion for disabled people ? How disability is generally perceived in African countries especially in Burkina Faso, Niger or Mali all of them in the Sahel region of West Africa and where violent terrorism is barbarically murdering lots innocent people ?
         <br>
@@ -5075,7 +5075,7 @@ function showSlides(n) {
 
 <div class="B">
     <div style="font-family: 'helvetica'; font-size: 12px; margin-top: -0.35rem;">
-        <h4>Inclusion Africa</h4>
+        <h4>Inclusion in Africa</h4>
     </div>
 <a href="https://www.hi-us.org/en/country/burkina-faso" target="_blank">
     <div class="country">
@@ -5106,7 +5106,7 @@ function showSlides(n) {
                     </div>
                     </a>
 
-                    <a href="https://www.hi-canada.org/en/country/benin" target="_blank">
+                    <a href="https://education-profiles.org/sub-saharan-africa/benin/~inclusion" target="_blank">
                     <div class="country">
                        6. In Benin
                             </div>
